--- a/schoolFrontend/src/app/components/nav/nav.component.html
+++ b/schoolFrontend/src/app/components/nav/nav.component.html
@@ -43,7 +43,7 @@
                     <a class="d-flex link-dark text-decoration-none align-items-center me-sm-2" id="dropdownUser1"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <div id="avatar-box"><img src=""></div>
-                        <span class="ms-2 me-1">{{loggedUser.name}}</span>
+                        <span class="ms-2 me-1">{{loggedUser.user.name}}</span>
                     </a>
                     <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
                         <li><a [routerLink]="['/settings']" class="dropdown-item">Settings</a></li>
