--- a/schoolFrontend/src/styles.scss
+++ b/schoolFrontend/src/styles.scss
@@ -19,6 +19,10 @@ a {
     word-break: break-word;
 }
 
+.inner-cont {
+    max-width: 700px;
+}
+
 // ===========================BUTTONS===========================
 
 .btn {
