--- a/schoolFrontend/src/app/app.component.html
+++ b/schoolFrontend/src/app/app.component.html
@@ -1,6 +1,10 @@
-<app-nav></app-nav>
-<app-login-modal></app-login-modal>
-<app-register-modal></app-register-modal>
-<app-offcanvas-nav></app-offcanvas-nav>
+<div class="my-body">
+    <app-nav></app-nav>
+    <app-login-modal></app-login-modal>
+    <app-register-modal></app-register-modal>
+    <app-offcanvas-nav></app-offcanvas-nav>
+    
+    <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
+<app-footer></app-footer>
