--- a/schoolFrontend/src/styles.scss
+++ b/schoolFrontend/src/styles.scss
@@ -6,8 +6,8 @@ $my-red: #dc3545;
 
 // ===========================GENERAL===========================
 
-body {
-    padding-bottom: 3rem;
+.my-body {
+    min-height: calc(100vh - 132px);
 }
 
 a {
@@ -155,6 +155,15 @@ textarea {
 
 }
 
+.big-spin {
+    width: 4rem;
+    margin-top: 30px;
+
+    .path {
+        stroke: aqua;
+    }
+}
+
 @keyframes rotate {
     100% {
         transform: rotate(360deg);
@@ -175,34 +184,6 @@ textarea {
     100% {
         stroke-dasharray: 90, 150;
         stroke-dashoffset: -124;
-    }
-}
-
-// ===========================POSTS===========================
-
-#pag-content-wrp{
-    max-width: 1000px;
-}
-
-.card, aside {
-    font-size: .93rem;
-}
-
-aside {
-    display: none;
-    position: sticky;
-    top: calc(100vh - 782px);
-    height: fit-content;
-    background-color: #fff;
-    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
-}
-
-@media screen and (min-width: 768px) {
-    aside {
-        display: initial;
     }
 }
 
