--- a/schoolFrontend/src/app/pages/academics/academics.component.scss
+++ b/schoolFrontend/src/app/pages/academics/academics.component.scss
@@ -1,5 +1,6 @@
 .my-background {
     position: absolute;
+    background-color: grey;
     background-image: url("../../../assets/library.jpg");
     height: calc(100vh - 3.6rem);
     width: 100%;
