--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -1,1 +1,26 @@
-<p>student-dashboard works!</p>
+<div class="container">
+  <div class="big-wrap">
+    <div class="bg-warning"></div>
+    <div class="bg-light">
+      <div>
+        <div class="d-flex align-items-baseline justify-content-between mt-3 mb-4 mx-3">
+          <h4>Calendar</h4>
+          <h6>{{ days[3].toLocaleDateString('en-us', { month: 'long' }) }}</h6>
+        </div>
+        <div class="d-flex">
+          <div @roll *ngFor="let day of days" class="text-muted" scope="col">
+            {{ day.toLocaleDateString('en-us', { weekday: 'short' }) }}
+          </div>
+        </div>
+        <div class="d-flex">
+          <button #day @roll (click)="selectDay($event, day)" *ngFor="let day of days" class="btn" scope="col">
+            {{ day.getDate() }}
+          </button>
+        </div>
+      </div>
+      <div class="d-flex flex-column">
+        <div *ngFor="let hour of hours" class="text-muted">{{ hour }}</div>
+      </div>
+    </div>
+  </div>
+</div>
