--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -1,26 +1,26 @@
-<div class="container">
-  <div class="big-wrap">
-    <div class="bg-warning"></div>
-    <div class="bg-light">
+<ng-container *ngIf="(klass$ | async) as klass; else loading">
+  <div class="container">
+    <div class="big-wrap">
       <div>
-        <div class="d-flex align-items-baseline justify-content-between mt-3 mb-4 mx-3">
-          <h4>Calendar</h4>
-          <h6>{{ days[3].toLocaleDateString('en-us', { month: 'long' }) }}</h6>
-        </div>
-        <div class="d-flex">
-          <div @roll *ngFor="let day of days" class="text-muted" scope="col">
-            {{ day.toLocaleDateString('en-us', { weekday: 'short' }) }}
+        <div class="bg-light rounded shadow wrapp">
+          <h4 class="mt-3 mb-4 mx-3">My Class</h4>
+          <div id="student" *ngFor="let student of klass!.students">
+            <div id="avatar-box">
+              <img [src]="student.avatar" alt="" />
+            </div>
+            <p>{{ student.name }} {{ student.surname }}</p>
           </div>
         </div>
-        <div class="d-flex">
-          <button #day @roll (click)="selectDay($event, day)" *ngFor="let day of days" class="btn" scope="col">
-            {{ day.getDate() }}
-          </button>
-        </div>
       </div>
-      <div class="d-flex flex-column">
-        <div *ngFor="let hour of hours" class="text-muted">{{ hour }}</div>
-      </div>
+      <app-calendar [klass]="klass"></app-calendar>
     </div>
   </div>
-</div>
+</ng-container>
+
+<ng-template #loading>
+  <div class="text-center">
+    <svg class="spinner big-spin" viewBox="0 0 50 50">
+      <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+    </svg>
+  </div>
+</ng-template>
