--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -1,17 +1,34 @@
-<ng-container *ngIf="(klass$ | async) as klass; else loading">
+<ng-container *ngIf="klass$ | async as klass; else loading">
   <div class="container">
     <div class="big-wrap">
       <div>
-        <div class="bg-light rounded shadow wrapp">
+        <div id="class-wrp" class="bg-light rounded shadow wrapp">
           <h4 class="mt-3 mb-4 mx-3">My Class</h4>
-          <div id="student" *ngFor="let student of klass!.students">
-            <div id="avatar-box">
-              <img [src]="student.avatar" alt="" />
+          <div id="student-wrp">
+            <div id="student" *ngFor="let student of klass!.students">
+              <div id="avatar-box">
+                <img [src]="student.avatar" alt="" />
+              </div>
+              <p>{{ student.name }} {{ student.surname }}</p>
             </div>
-            <p>{{ student.name }} {{ student.surname }}</p>
           </div>
         </div>
       </div>
+
+      <div id="center">
+        <div class="bg-light rounded shadow wrapp">
+          <h4 class="mt-3 mb-4 mx-3">{{ klass.course.info.name }}</h4>
+          <div id="main">
+            <h5>Attendance</h5>
+            <h5>Grades</h5>
+          </div>
+        </div>
+
+        <div class="bg-light rounded shadow wrapp">
+          <h4 class="mt-3 mb-4 mx-3">Assignments</h4>
+        </div>
+      </div>
+
       <app-calendar [klass]="klass"></app-calendar>
     </div>
   </div>
