--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="klass$ | async as klass; else loading">
+<ng-container *ngIf="klass; else loading">
   <div class="container">
     <div class="big-wrap">
       <div>
@@ -19,7 +19,10 @@
         <div class="bg-light rounded shadow wrapp">
           <h4 class="mt-3 mb-4 mx-3">{{ klass.course.info.name }}</h4>
           <div id="main">
-            <h5>Attendance</h5>
+            <div>
+              <h5>Attendance</h5>
+              <app-circle-progress [attendance$]="attendance$"></app-circle-progress>
+            </div>
             <h5>Grades</h5>
           </div>
         </div>
