--- a/schoolFrontend/src/app/components/circle-progress/circle-progress.component.scss
+++ b/schoolFrontend/src/app/components/circle-progress/circle-progress.component.scss
@@ -19,6 +19,6 @@ svg {
         stroke: #428bca;
         stroke-width: 8;
         fill-opacity: 0;
-        transition: all .8s ease;
+        transition: all .8s ease-in-out;
     }
 }
