--- a/schoolFrontend/src/app/pages/academics/academics.component.html
+++ b/schoolFrontend/src/app/pages/academics/academics.component.html
@@ -9,7 +9,7 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore temporibus harum placeat nulla adipisci? Enim, praesentium dolorem at adipisci
         natus ipsum dolorum nam perferendis vitae repudiandae voluptate aut velit molestiae.
       </p>
-      <p><u>Discover...</u></p>
+      <u>Discover...</u>
     </div>
     <div [routerLink]="['/academics/graduate']" class="shadow border border-3">
       <h3>Graduate Education</h3>
@@ -18,7 +18,7 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore temporibus harum placeat nulla adipisci? Enim, praesentium dolorem at adipisci
         natus ipsum dolorum nam perferendis vitae repudiandae voluptate aut velit molestiae.
       </p>
-      <p><u>Discover...</u></p>
+      <u>Discover...</u>
     </div>
   </div>
 </div>
