--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -2,9 +2,15 @@
   <div class="container">
     <div class="big-wrap">
       <div>
-        <div id="class-wrp" class="bg-light rounded shadow wrapp">
+        <div id="class-wrp" class="bg-light rounded shadow fake-border">
           <h4 class="mt-3 mb-4 mx-3">My Class</h4>
           <div id="student-wrp">
+            <div id="student" *ngFor="let teacher of klass!.teachers">
+              <div id="avatar-box">
+                <img [src]="teacher.avatar" alt="" />
+              </div>
+              <a class="color fw-bold">{{ teacher.name }} {{ teacher.surname }} - {{ teacher.module }}</a>
+            </div>
             <div id="student" *ngFor="let student of klass!.students">
               <div id="avatar-box">
                 <img [src]="student.avatar" alt="" />
@@ -16,19 +22,44 @@
       </div>
 
       <div id="center">
-        <div class="bg-light rounded shadow wrapp">
-          <h4 class="mt-3 mb-4 mx-3">{{ klass.course.info.name }}</h4>
+        <div class="bg-light rounded shadow fake-border">
+          <h4 class="my-3 mx-3">{{ klass.course.info.name }}</h4>
+          <hr />
           <div id="main">
             <div>
               <h5>Attendance</h5>
-              <app-circle-progress [attendance$]="attendance$"></app-circle-progress>
+              <app-circle-progress [percentage$]="attendance$"></app-circle-progress>
             </div>
             <h5>Grades</h5>
           </div>
         </div>
 
-        <div class="bg-light rounded shadow wrapp">
+        <div class="bg-light rounded shadow fake-border">
           <h4 class="mt-3 mb-4 mx-3">Assignments</h4>
+          <div *ngIf="assignments$ | async as assignments; else loading" class="mx-3">
+            <div id="assignments">
+              <p *ngFor="let assignment of assignments.content">{{ assignment.title }}</p>
+            </div>
+            <div class="d-flex justify-content-center">
+              <div class="px-4 pb-1 d-inline-flex align-items-baseline">
+                <small class="text-muted me-4">Page {{ page + 1 }} of {{ assignments.totalPages }}</small>
+                <button (click)="paginate(-1)" class="btn pag-btn" [disabled]="page + 1 == 1">
+                  <i class="bi bi-chevron-left me-2"></i>
+                </button>
+                <button (click)="paginate(1)" class="btn pag-btn" [disabled]="page + 1 == assignments.totalPages">
+                  <i class="bi bi-chevron-right ms-2"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <ng-template #loading>
+            <div id="assignments-placeholder" class="text-center">
+              <svg class="spinner big-spin" viewBox="0 0 50 50">
+                <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+              </svg>
+            </div>
+          </ng-template>
         </div>
       </div>
 
