--- a/schoolFrontend/src/styles.scss
+++ b/schoolFrontend/src/styles.scss
@@ -64,6 +64,25 @@ a {
     text-decoration: none;
 }
 
+// ===========================PAGINATION===========================
+
+.pag-btn {
+    opacity: .7;
+    border: none;
+
+    i {
+        font-size: 1rem;
+    }
+
+    &:hover {
+        opacity: 1;
+    }
+
+    &:disabled {
+        opacity: .3;
+    }
+}
+
 // ===========================FORM===========================
 
 input,
