--- a/schoolFrontend/src/app/components/circle-progress/circle-progress.component.html
+++ b/schoolFrontend/src/app/components/circle-progress/circle-progress.component.html
@@ -1,6 +1,6 @@
-<div>
-  <svg height="180" width="180">
-    <circle #percentage id="circle" cx="90" cy="90" r="70" />
+<div class="mb-2">
+  <svg height="140" width="140">
+    <circle #circle id="circle" cx="70" cy="70" r="60" />
   </svg>
-  <p>{{ attendance }}%</p>
+  <p>{{ percentage }}%</p>
 </div>
