--- a/schoolFrontend/src/app/components/nav/nav.component.html
+++ b/schoolFrontend/src/app/components/nav/nav.component.html
@@ -20,22 +20,61 @@
         </div>
 
         <form id="src-bar" class="w-100 ms-4" role="search">
-          <input type="search" class="form-control rounded-0 rounded-start" placeholder="Search..." aria-label="Search" />
+          <input
+            type="search"
+            class="form-control rounded-0 rounded-start"
+            placeholder="Search..."
+            aria-label="Search"
+          />
           <button type="button" class="src-btn btn btn-dark me-2"><i class="bi bi-search"></i></button>
         </form>
       </div>
 
       <div class="d-flex justify-content-end">
         <ul id="nav-links" class="nav justify-content-center gap-3 me-4">
-          <li *ngIf="!loggedUser?.user?.roles?.includes('ROLE_STUDENT')"><a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link px-0 link-dark">Home</a></li>
-          <li *ngIf="loggedUser?.user?.roles?.includes('ROLE_STUDENT')"><a [routerLink]="['/student_dashboard']" routerLinkActive="active" class="nav-link px-0 link-dark">Dashboard</a></li>
-          <li class="drop-link"><a [routerLink]="['/academics']" routerLinkActive="active" class="nav-link px-0 link-dark">Academics</a>
+          <li *ngIf="!loggedUser?.user?.roles?.includes('ROLE_STUDENT')">
+            <a
+              [routerLink]="['/']"
+              routerLinkActive="active"
+              [routerLinkActiveOptions]="{ exact: true }"
+              class="nav-link px-0 link-dark"
+              >Home</a
+            >
+          </li>
+          <li *ngIf="loggedUser?.user?.roles?.includes('ROLE_STUDENT')">
+            <a
+              [routerLink]="['/student_dashboard']"
+              routerLinkActive="active"
+              class="nav-link px-0 link-dark"
+              >Dashboard</a
+            >
+          </li>
+          <li class="drop-link">
+            <a [routerLink]="['/academics']" routerLinkActive="active" class="nav-link px-0 link-dark"
+              >Academics</a
+            >
             <ul class="drop-link-menu shadow border">
-              <li><a [routerLink]="['/academics/undergraduate']" routerLinkActive="active" class="nav-link px-0 link-dark">Undergraduate</a></li>
-              <li><a [routerLink]="['/academics/graduate']" routerLinkActive="active" class="nav-link px-0 link-dark">Graduate</a></li>
+              <li>
+                <a
+                  [routerLink]="['/academics/undergraduate']"
+                  routerLinkActive="active"
+                  class="nav-link px-0 link-dark"
+                  >Undergraduate</a
+                >
+              </li>
+              <li>
+                <a
+                  [routerLink]="['/academics/graduate']"
+                  routerLinkActive="active"
+                  class="nav-link px-0 link-dark"
+                  >Graduate</a
+                >
+              </li>
             </ul>
           </li>
-          <li><a [routerLink]="['/g']" routerLinkActive="active" class="nav-link px-0 link-dark">About</a></li>
+          <li>
+            <a [routerLink]="['/g']" routerLinkActive="active" class="nav-link px-0 link-dark">About</a>
+          </li>
         </ul>
 
         <ng-template #notLogged class="text-nowrap">
@@ -61,20 +100,36 @@
         </ng-template>
 
         <div *ngIf="loggedUser; else notLogged" class="dropdown text-end d-flex">
-          <a class="d-flex link-dark text-decoration-none align-items-center me-sm-2" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+          <a
+            class="d-flex link-dark text-decoration-none align-items-center me-sm-2"
+            id="dropdownUser1"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
             <div id="avatar-box"><img [src]="loggedUser.user.avatar" /></div>
             <span class="ms-2 me-1">{{ loggedUser.user.name }}</span>
           </a>
           <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
             <li><a [routerLink]="['/settings']" class="dropdown-item">Settings</a></li>
-            <li><a [routerLink]="['/' + loggedUser.user.id + '/profile']" class="dropdown-item">Profile</a></li>
-            <li *ngIf="loggedUser.user.roles.includes('ROLE_ADMIN')"><a [routerLink]="['/management']" class="dropdown-item">Manage Staff</a></li>
+            <li>
+              <a [routerLink]="['/' + loggedUser.user.id + '/profile']" class="dropdown-item">Profile</a>
+            </li>
+            <li *ngIf="loggedUser.user.roles.includes('ROLE_ADMIN')">
+              <a [routerLink]="['/management']" class="dropdown-item">Manage Staff</a>
+            </li>
             <li>
               <hr class="dropdown-divider" />
             </li>
             <li><a (click)="logout()" class="dropdown-item">Sign out</a></li>
           </ul>
-          <button [routerLink]="['/apply']" type="button" class="apply-btn btn btn-dark px-sm-4 px-3">Apply</button>
+          <button
+            *ngIf="loggedUser.user.roles.length <= 1 && loggedUser.user.roles.includes('ROLE_GUEST')"
+            [routerLink]="['/apply']"
+            type="button"
+            class="apply-btn btn btn-dark px-sm-4 px-3"
+          >
+            Apply
+          </button>
         </div>
       </div>
     </header>
