--- a/schoolFrontend/src/app/components/offcanvas-nav/offcanvas-nav.component.html
+++ b/schoolFrontend/src/app/components/offcanvas-nav/offcanvas-nav.component.html
@@ -1,20 +1,82 @@
-<div (window:resize)="onResizeDismiss()" class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasNav"
-    aria-labelledby="offcanvasNavLabel">
-    <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasNavLabel">MarsU</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body">
-        <form id="mbl-src-bar" role="search" class="mb-3">
-            <i class="bi bi-search"></i>
-            <input type="search" class="form-control rounded-pill" placeholder="Search..." aria-label="Search">
-        </form>
+<div
+  (window:resize)="onResizeDismiss()"
+  class="offcanvas offcanvas-start"
+  data-bs-scroll="true"
+  tabindex="-1"
+  id="offcanvasNav"
+  aria-labelledby="offcanvasNavLabel"
+>
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasNavLabel">MarsU</h5>
+    <button
+      type="button"
+      class="btn-close text-reset"
+      data-bs-dismiss="offcanvas"
+      aria-label="Close"
+    ></button>
+  </div>
+  <div class="offcanvas-body">
+    <form id="mbl-src-bar" role="search" class="mb-3">
+      <i class="bi bi-search"></i>
+      <input type="search" class="form-control rounded-pill" placeholder="Search..." aria-label="Search" />
+    </form>
 
-        <ul class="nav d-block me-4">
-            <li><a (click)="closeOffcanvas()" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link px-0 link-dark">Home</a></li>
-            <li><a (click)="closeOffcanvas()" [routerLink]="['/gg']" routerLinkActive="active" class="nav-link px-0 link-dark">Academics</a></li>
-            <li><a (click)="closeOffcanvas()" [routerLink]="['/ggg']" routerLinkActive="active" class="nav-link px-0 link-dark">About</a></li>
-            <li><a *ngIf="!(loggedObs$ | async) as loggedUser" (click)="closeOffcanvas()" [routerLink]="['/apply']" routerLinkActive="active" class="nav-link px-0 link-dark">Apply</a></li>
-        </ul>
-    </div>
+    <ul class="nav d-block me-4">
+      <li *ngIf="!loggedUser?.user?.roles?.includes('ROLE_STUDENT')">
+        <a
+          (click)="closeOffcanvas()"
+          [routerLink]="['/']"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          class="nav-link px-0 link-dark"
+          >Home</a
+        >
+      </li>
+      <li *ngIf="loggedUser?.user?.roles?.includes('ROLE_STUDENT')">
+        <a [routerLink]="['/student_dashboard']" routerLinkActive="active" class="nav-link px-0 link-dark"
+          >Dashboard</a
+        >
+      </li>
+      <li>
+        <a
+          (click)="closeOffcanvas()"
+          [routerLink]="['/academics']"
+          routerLinkActive="active"
+          class="nav-link px-0 link-dark"
+          >Academics</a
+        >
+      </li>
+      <li>
+        <a
+          (click)="closeOffcanvas()"
+          [routerLink]="['/ggg']"
+          routerLinkActive="active"
+          class="nav-link px-0 link-dark"
+          >About</a
+        >
+      </li>
+      <li
+        *ngIf="
+          loggedUser && loggedUser.user.roles.length <= 1 && loggedUser.user.roles.includes('ROLE_GUEST')
+        "
+      >
+        <a
+          (click)="closeOffcanvas()"
+          [routerLink]="['/apply']"
+          routerLinkActive="active"
+          class="nav-link px-0 link-dark"
+          >Apply</a
+        >
+      </li>
+      <li *ngIf="!loggedUser">
+        <a
+          (click)="setModal('Log In To Apply', '/apply')"
+          data-bs-toggle="modal"
+          href="#exampleModalToggle2"
+          class="nav-link px-0 link-dark"
+          >Apply</a
+        >
+      </li>
+    </ul>
+  </div>
 </div>
