--- a/schoolFrontend/src/app/pages/management/management.component.html
+++ b/schoolFrontend/src/app/pages/management/management.component.html
@@ -32,10 +32,10 @@
   <div class="d-flex justify-content-center">
     <div class="shadow-sm px-4 py-1 mt-2 d-inline-flex align-items-baseline">
       <small class="text-muted me-4">Page {{ page + 1 }} of {{ users.totalPages }}</small>
-      <button (click)="paginate(-1)" class="btn" [disabled]="page + 1 == 1">
+      <button (click)="paginate(-1)" class="btn pag-btn" [disabled]="page + 1 == 1">
         <i class="bi bi-chevron-left me-2"></i>
       </button>
-      <button (click)="paginate(1)" class="btn" [disabled]="page + 1 == users.totalPages">
+      <button (click)="paginate(1)" class="btn pag-btn" [disabled]="page + 1 == users.totalPages">
         <i class="bi bi-chevron-right ms-2"></i>
       </button>
     </div>
