--- a/schoolFrontend/src/app/pages/apply/apply.component.html
+++ b/schoolFrontend/src/app/pages/apply/apply.component.html
@@ -2,7 +2,7 @@
   <form
     [formGroup]="applyForm"
     (ngSubmit)="onSubmit(applyForm)"
-    class="modal-body container inner-cont px-0 py-2"
+    class="modal-body container inner-cont shadow rounded"
   >
     <h3>Apply</h3>
     <label for="email">Email</label>
