--- a/schoolFrontend/src/app/components/calendar/calendar.component.html
+++ b/schoolFrontend/src/app/components/calendar/calendar.component.html
@@ -1,18 +1,20 @@
-<div id="wrapp" class="bg-light rounded shadow">
-  <div>
+<div id="wrapp">
+  <div id="head">
     <div class="my-flex align-items-baseline justify-content-between mt-3 mb-4 mx-3">
       <h4>Calendar</h4>
       <h6>{{ days[3].toLocaleDateString('en-us', { month: 'long', year: 'numeric' }) }}</h6>
     </div>
-    <div class="my-flex">
-      <div @roll *ngFor="let day of days" class="text-muted" scope="col">
-        {{ day.toLocaleDateString('en-us', { weekday: 'short' }) }}
+    <div id="roller" >
+      <div class="my-flex">
+        <div @roll *ngFor="let day of days" class="text-muted" scope="col">
+          {{ day.toLocaleDateString('en-us', { weekday: 'short' }) }}
+        </div>
       </div>
-    </div>
-    <div class="my-flex">
-      <button #day @roll (click)="selectDay($event, day)" *ngFor="let day of days" class="btn" scope="col">
-        {{ day.getDate() }}
-      </button>
+      <div class="my-flex">
+        <button #day @roll (click)="selectDay($event, day)" *ngFor="let day of days" class="btn" scope="col">
+          {{ day.getDate() }}
+        </button>
+      </div>
     </div>
   </div>
 
